--- a/pixi.toml
+++ b/pixi.toml
@@ -9,7 +9,7 @@ version = "0.1.0"
 [tasks]
 download_src_03 = {cmd = "echo Download torchcodec src && mkdir -p ./.pixi_ws && git clone https://github.com/traversaro/torchcodec --branch 03removewerror ./.pixi_ws/torchcodec", outputs=[".pixi_ws/torchcodec/README.md"]}
 download_src_02 = {cmd = "echo Download torchcodec src && mkdir -p ./.pixi_ws && git clone https://github.com/traversaro/torchcodec --branch release/0.2.1 ./.pixi_ws/torchcodec02", outputs=[".pixi_ws/torchcodec02/README.md"]}
-test_cxx = {cmd = "echo Run torchcodec C++ tests && cmake -DCMAKE_BUILD_TYPE=Release  -DBUILD_TESTS=1 -GNinja -B ./.pixi_ws/torchcodec/build -S  ./.pixi_ws/torchcodec && cmake --build ./.pixi_ws/torchcodec/build && ctest --test-dir ./.pixi_ws/torchcodec/build --build-config Release", depends-on = ["download_src_03"]}
+test_cxx = {cmd = "echo Run torchcodec C++ tests && cmake -DCMAKE_BUILD_TYPE=Release  -DBUILD_TESTS=1 -GNinja -B ./.pixi_ws/torchcodec/build -S  ./.pixi_ws/torchcodec && cmake --build ./.pixi_ws/torchcodec/build && ctest  --rerun-failed --output-on-failure --test-dir ./.pixi_ws/torchcodec/build --build-config Release", depends-on = ["download_src_03"]}
 test_py = {cmd = "echo Run torchcodec python tests && pytest", cwd = "./.pixi_ws/torchcodec02/test", depends-on = ["download_src_02"]}
 # If there is any problem, run uninstall_src_deps to uninstall the source dependencies
 cleanup_src_deps = {cmd = "echo Uninstall src deps && rm -rf ./.pixi_ws/"}
