--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ authors = ["Silvio <silvio.traversaro@iit.it>"]
 channels = ["conda-forge"]
 description = "Add a short description here"
 name = "torchcodec-test-debug"
-platforms = ["linux-64", "linux-aarch64"]
+platforms = ["linux-64", "linux-aarch64", "osx-64", "osx-arm64"]
 version = "0.1.0"
 
 [tasks]
