--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
         build_type: [Release]
         os: [ubuntu-22.04, macos-14]
         pixi_task: [test_py]
+        pixi_env: [condaffmpeg71, pipffmpeg71, pipffmpeg70]
 
     steps:
     - uses: actions/checkout@v4
@@ -31,5 +32,5 @@ jobs:
 
     - name: Run the task ${{ matrix.pixi_task }}
       shell: bash -l {0}
-      run: pixi run ${{ matrix.pixi_task }}
+      run: pixi run -e ${{ matrix.pixi_env }} ${{ matrix.pixi_task }}
 
