--- a/pixi.toml
+++ b/pixi.toml
@@ -27,6 +27,9 @@ ffmpeg = "7.0.*"
 [feature.conda.dependencies]
 pytorch = "2.7.*"
 
+[feature.conda]
+platforms = ["linux-64", "osx-64", "osx-arm64"]
+
 [feature.pip.pypi-dependencies]
 torch = "==2.7.*"
 
