--- a/pixi.toml
+++ b/pixi.toml
@@ -53,7 +53,7 @@ torchcodec = "==0.3.*"
 
 [feature.torchcodecconda.pypi-dependencies]
 # this is just v0.3.0 with https://github.com/pytorch/torchcodec/pull/656
-torchcodec = { git = "https://github.com/traversaro/torchcodec.git", rev = "03removewerror" }
+torchcodec = { git = "https://github.com/traversaro/torchcodec.git", rev = "b2a03deffe20b3a779195c1baaf830acea05d6f3" }
 
 [environments]
 default = {features = ["torchconda","ffmpeg71"], solve-group = "ffmpeg71"}
